Add list distance solver
WIP
add tests
added sort
small improvement on parser